--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "bootstrap": "^4.3.1",
     "jquery": "^3.3.1",
     "mapbox-gl": "^0.53.0",
-    "popper.js": "^1.14.7"
+    "popper.js": "^1.14.7",
+    "typed.js": "^2.0.10"
   },
   "devDependencies": {
     "webpack-dev-server": "3.1.11"
