--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "LESSONFY",
   "private": true,
   "dependencies": {
+    "@mapbox/mapbox-gl-geocoder": "^3.1.6",
     "@rails/webpacker": "3.5",
     "bootstrap": "^4.3.1",
     "jquery": "^3.3.1",
